# Term-Project

./: CMakeCache.txt  CMakeLists.txt  Ensemble.cc  Ensemble.h  Ensemble_Test.cc  ItemRec.cc  Knn.cc  Knn.h  Knn_test.cc  MYopencv.h  Makefile  Makefile_TextRec_Ensemble  Term-Project  Text2Vec.cc  Text2Vec.h  Text2Vec_Test.cc  booktest.cc  cmake_install.cmake  histogram.cpp  histogram.h  image2vec.cpp  image2vec.h  img2vec_main.cpp  kmeans.cpp  kmeans.h  test.cc  test.txt  test_TagRec.cpp  test_TextRec_Ensemble.cc  test_TextRec_Ensemble.cpp
Ensemble/: Ensemble.cc  Ensemble.h  Makefile  Test_Ensemble.cpp
ImageRec/: MYopencv.h  histogram.cc  histogram.h  image2vec.cc  image2vec.h  kmeans.cc  test_ImageRec.cpp
ItemRec/: ImageRec.cpp  MYopencv.h  image2vec.h  kmeans.cpp  kmeans.h
Knn/: Knn.cc  Knn.h  Knn_test.cpp
Tag2Vec/: Makefile  Tag2Vec.cc  Tag2Vec.h  Tag2Vec_test.cc
TagRec/: ItemRec.cc  TagRec.cc  TagRec.h  TagRec_test.cc
TextRec/: Makefile  TextRec.cc  TextRec.h  TextRec_Test.cpp
